create-environment/ingress/dev03/ingress-tls-hideinfo-star-dev03.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: default
  name: hideinfo-star-frontend
  annotations:
    kubernetes.io/ingress.class: "nsx"
    ncp/use-regex: "True"
    kubernetes.io/ingress.allow-http: "false"
    ncp/http-redirect: "True"
spec:
  tls:
    - secretName: dev-ingress-cert
  rules:
  - host: hideinfo-dev03.in.staffservice.co.jp
    http:
      paths:
      - path: /(.*)
        backend:
          serviceName: hideinfo-star-frontend
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: default
  name: hideinfo-star-backend
  annotations:
    kubernetes.io/ingress.class: "nsx"
    ncp/use-regex: "True"
    kubernetes.io/ingress.allow-http: "false"
    ncp/http-redirect: "True"
spec:
  tls:
    - secretName: dev-ingress-cert
  rules:
  - host: hideinfo-dev03.in.staffservice.co.jp
    http:
      paths:
      - path: /api(/|$)(.*)
        backend:
          serviceName: hideinfo-star-backend
          servicePort: 80
